@@ -78,6 +78,14 @@ namespace libtorrent
 
 		bool is_closed() const { return m_abort; }
 
+	protected:
+
+		struct queued_packet
+		{
+			udp::endpoint ep;
+			buffer buf;
+		};
+
 	private:
 
 		callback_t m_callback;
@@ -91,7 +99,7 @@ namespace libtorrent
 		void handshake2(error_code const& e);
 		void handshake3(error_code const& e);
 		void handshake4(error_code const& e);
-		void socks_forward_udp();
+		void socks_forward_udp(mutex::scoped_lock& l);
 		void connect1(error_code const& e);
 		void connect2(error_code const& e);
 
@@ -119,9 +127,14 @@ namespace libtorrent
 		connection_queue& m_cc;
 		tcp::resolver m_resolver;
 		char m_tmp_buf[100];
+		bool m_queue_packets;
 		bool m_tunnel_packets;
 		bool m_abort;
 		udp::endpoint m_proxy_addr;
+		// while we're connecting to the proxy
+		// we have to queue the packets, we'll flush
+		// them once we're connected
+		std::list<queued_packet> m_queue;
 #ifdef TORRENT_DEBUG
 		bool m_started;
 		int m_magic;
@@ -137,11 +150,6 @@ namespace libtorrent
 		void close();
 
 	private:
-		struct queued_packet
-		{
-			udp::endpoint ep;
-			buffer buf;
-		};
 		void on_tick(error_code const& e);
 
 		deadline_timer m_timer;
